--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@react-google-maps/api": "^2.12.1",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
